--- a/README.html
+++ b/README.html
@@ -64,12 +64,14 @@
   <p>2018年11月26日 加拿大奶瓶C：</p>
   <p>&nbsp;</p>
   <p>ssr://NjQuMTM3LjI1MC4xMzY6MTcxMTphdXRoX3NoYTFfdjQ6Y2hhY2hhMjA6cGxhaW46Wkc5MVlpNXBieTl6YzNwb1puZ3ZLakUzTVRFLz9vYmZzcGFyYW09JnByb3RvcGFyYW09JnJlbWFya3M9NVlxZzVvdV81YVNuUXpFeE1qWSZncm91cD01YkNQNks2djVaQ001YTJt</p>
-  <p>&nbsp;</p>
-  <p>微信扫码，随缘赞助</p>
+  <p align="center">&nbsp;</p>
+  <p align="center">微信扫码，随缘赞助</p>
 </div>
 <div title="" id="comp-jozy9afy" data-content-padding-vertical="0" data-content-padding-horizontal="0" data-exact-height="432">
   <div id="comp-jozy9afylink">
-    <div id="comp-jozy9afyimg" data-style=""><img id="comp-jozy9afyimgimage" alt="BAFFED254D1DD2BBB1D0E27A2886E746.png" src="https://static.wixstatic.com/media/817105_d22688ea29624283906f421ecbad5f5b~mv2.png/v1/fill/w_497,h_497,al_c,usm_0.66_1.00_0.01/BAFFED254D1DD2BBB1D0E27A2886E746.png" data-type="image" /></div>
+    <div id="comp-jozy9afyimg" data-style="">
+      <div align="center"><img id="comp-jozy9afyimgimage" alt="BAFFED254D1DD2BBB1D0E27A2886E746.png" src="https://static.wixstatic.com/media/817105_d22688ea29624283906f421ecbad5f5b~mv2.png/v1/fill/w_497,h_497,al_c,usm_0.66_1.00_0.01/BAFFED254D1DD2BBB1D0E27A2886E746.png" data-type="image" /></div>
+    </div>
   </div>
 </div>
 </body>
