--- a/002.html
+++ b/002.html
@@ -10,8 +10,7 @@
   <h2>11-28 酸酸乳原味/草莓口味牛奶乳味饮品250ml免费礼盒装奶瓶链接更新,酸甜好滋味</h2>
 </div>
 <div id="comp-ir243rad" data-packed="true">
-  <p>请使用谷歌火狐浏览器，不要使用国产浏览器和杀毒软件(如360、腾讯等)；禁止用于DDOS&nbsp;工具、BT/PT下载、P2P等行为（直接封IP处理）</p>
-  <p>&nbsp;</p>
+  <p>请使用谷歌火狐浏览器，不要使用国产浏览器和杀毒软件(如360、腾讯等)；禁止用于DDOS&nbsp;工具、BT/PT下载、P2P等行为（直接封IP处理）  </p>
   <p>SSR-SSTAP软件下载入口</p>
   <p>注意：看标题更新日期，失效奶瓶会在更新时删除，建议不要都去吸最后更新的，防止塞瓶！另外可以尝试Vmess （更稳定些）。</p>
   <p>&nbsp;</p>
@@ -65,14 +64,14 @@
   <p>&nbsp;</p>
   <p>ssr://NjQuMTM3LjI1MC4xMzY6MTcxMTphdXRoX3NoYTFfdjQ6Y2hhY2hhMjA6cGxhaW46Wkc5MVlpNXBieTl6YzNwb1puZ3ZLakUzTVRFLz9vYmZzcGFyYW09JnByb3RvcGFyYW09JnJlbWFya3M9NVlxZzVvdV81YVNuUXpFeE1qWSZncm91cD01YkNQNks2djVaQ001YTJt</p>
   <p align="center">&nbsp;</p>
-  <p align="left">微信扫码，随缘赞助</p>
+  <p align="left">微信扫码，随缘赞助
+  </p>
+  <p align="left"><img src="/BAFFED254D1DD2BBB1D0E27A2886E746.png" width="720" height="720" /></p>
+  <p align="left">&nbsp;</p>
+  <p align="left">&nbsp;</p>
+  <p align="left">&nbsp;</p>
 </div>
-<div title="" id="comp-jozy9afy" data-content-padding-vertical="0" data-content-padding-horizontal="0" data-exact-height="432">
-  <div id="comp-jozy9afylink">
-    <div id="comp-jozy9afyimg" data-style="">
-      <div align="left"><img id="comp-jozy9afyimgimage" alt="BAFFED254D1DD2BBB1D0E27A2886E746.png" src="https://static.wixstatic.com/media/817105_d22688ea29624283906f421ecbad5f5b~mv2.png/v1/fill/w_497,h_497,al_c,usm_0.66_1.00_0.01/BAFFED254D1DD2BBB1D0E27A2886E746.png" data-type="image" /></div>
-    </div>
-  </div>
-</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 </body>
 </html>
