--- a/002.html
+++ b/002.html
@@ -66,9 +66,7 @@
   <p align="center">&nbsp;</p>
   <p align="left">微信扫码，随缘赞助
   </p>
-  <p align="left"><img src="/BAFFED254D1DD2BBB1D0E27A2886E746.png" width="720" height="720" /></p>
-  <p align="left">&nbsp;</p>
-  <p align="left">&nbsp;</p>
+  <p align="left"><img src="file:///C|/Users/TIME/Pictures/BAFFED254D1DD2BBB1D0E27A2886E746.png" width="720" height="720" /></p>
   <p align="left">&nbsp;</p>
 </div>
 <p>&nbsp;</p>
