--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<div align="center"><img src="P/捕获666.PNG" width="1156" height="501" /><a href="https://mp.weixin.qq.com/s?__biz=Mzg2ODAwNzczOA==&mid=2247484277&idx=1&sn=1478892126c9304e270ff32374f3725b&chksm=ceb3a920f9c42036a485abae199889f15dccedffb7ed7f81a39b25f9898290b99697ab09b290&token=534027087&lang=zh_CN#rd">https://mp.weixin.qq.com/s?__biz=Mzg2ODAwNzczOA==&mid=2247484277&idx=1&sn=1478892126c9304e270ff32374f3725b&chksm=ceb3a920f9c42036a485abae199889f15dccedffb7ed7f81a39b25f9898290b99697ab09b290&token=534027087&lang=zh_CN#rd</a></div>
+<div align="center"><img src="P/捕获666.PNG" width="1156" height="501" /></div>
 <ul>
   <li>
     <div align="center">戴伯杰傻帽</div>
