--- a/test.html
+++ b/test.html
@@ -6,12 +6,9 @@
 </head>
 
 <body>
-<div align="center"><img src="P/捕获666.PNG" width="1156" height="501" /></div>
-<ul>
-  <li>
-    <div align="center">戴伯杰傻帽</div>
-  </li>
-</ul>
-<p>&nbsp;</p>
+<div align="center"><a href="https://mp.weixin.qq.com/s?__biz=Mzg2ODAwNzczOA==&amp;mid=2247484277&amp;idx=1&amp;sn=1478892126c9304e270ff32374f3725b&amp;chksm=ceb3a920f9c42036a485abae199889f15dccedffb7ed7f81a39b25f9898290b99697ab09b290&amp;token=534027087&amp;lang=zh_CN#rd"><img src="P/捕获666.PNG" width="1156" height="501" /></a>
+  <div align="center"></div>
+</div>
+<div align="center">黛伯杰傻帽 </div>
 </body>
 </html>
