--- a/test.html
+++ b/test.html
@@ -9,9 +9,8 @@
 <div align="center"><a href="https://mp.weixin.qq.com/s?__biz=Mzg2ODAwNzczOA==&amp;mid=2247484277&amp;idx=1&amp;sn=1478892126c9304e270ff32374f3725b&amp;chksm=ceb3a920f9c42036a485abae199889f15dccedffb7ed7f81a39b25f9898290b99697ab09b290&amp;token=534027087&amp;lang=zh_CN#rd"><img src="P/捕获666.PNG" width="1156" height="501" /></a>
   <div align="center"></div>
 </div>
-<div align="center">黛伯杰傻帽
-
-<embed src="//music.163.com/style/swf/widget.swf?sid=2287797892&type=0&auto=1&width=278&height=32" width="298" height="52"  allowNetworking="all"></embed> </div>
+<div align="center">黛伯杰傻帽</div>
 <p></p>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=298 height=52 src="//music.163.com/outchain/player?type=0&id=2287797892&auto=1&height=32"></iframe>
 </body>
 </html>
