--- a/test.html
+++ b/test.html
@@ -1,16 +1,206 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
-</head>
+<!DOCTYPE html PUBLIC -//W3C//DTD XHTML 1.0 Strict//EN http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd>
+ <html lang="en">
+ <head>
+	 <title></title>
+	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	 <link rel="stylesheet" href="" type="text/css"/>
+ </head>
+	 <body>
+	 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=2&id=1330023212&auto=1&height=32"></iframe> 
+      <script type="text/javascript">
+document.write('<h1>  哈哈</h1>');
+document.write('<h1>你真笨</h1>');
+document.write('<h1>︱.⒉з⒋5</h1>');
 
-<body>
-<div align="center"><a href="https://mp.weixin.qq.com/s?__biz=Mzg2ODAwNzczOA==&amp;mid=2247484277&amp;idx=1&amp;sn=1478892126c9304e270ff32374f3725b&amp;chksm=ceb3a920f9c42036a485abae199889f15dccedffb7ed7f81a39b25f9898290b99697ab09b290&amp;token=534027087&amp;lang=zh_CN#rd"><img src="P/捕获666.PNG" width="1156" height="501" /></a>
-  <div align="center"></div>
-</div>
-<div align="center">黛伯杰傻帽</div>
-<p>&nbsp;</p>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=2&id=1330023212&auto=1&height=32"></iframe>
-</body>
-</html>
+
+alert(".哈哈，又有人上当了，.");
+
+alert(".你是不是感觉自己很倒霉");alert(".想撞墙？？..");alert(".其实也没什么");alert(".就是几个窗口而已吧");alert(".真的只有几个窗口哦.");alert(".点一下");alert(".再点一下");alert("最后一下");alert(".好了，可以了");alert("等待中..");
+alert("......");alert("......");alert("......");
+alert("发现病毒入侵");
+alert("发现病毒入侵");
+alert("正在全盘监查。。。");
+alert("  提示:检测失败，请勿点击，系统恢复中。。。");
+alert("      恢复中断，病毒开始入侵。。");
+alert("     提示:确定下载     ");
+alert("病毒下载中");
+ 
+alert("病毒下载中");
+ alert("病毒下载中");
+ 
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+ alert("病毒下载中");
+alert("病毒下载中");
+alert("病毒正在下载中");
+ 
+alert("病毒正在下载中"); 
+alert("病毒正在下载中");
+alert("病毒正在下载中"); 
+alert("病毒正在下载中"); 
+alert("病毒正在下载中"); 
+alert("病毒正在下载中");
+alert("病毒正在下载中"); 
+
+ 
+ 
+alert("                  呵呵");
+alert("                傻眼了吧");
+alert("              不玩你了");
+alert("            点击确定");
+alert("          真乖");
+alert("               你可以上网了");
+alert("                是否关闭窗口");
+alert("对不起，你没有该权限"); 
+ alert("对不起，你没有该权限"); 
+alert("对不起，你没有该权限"); 
+ alert("对不起，你没有该权限"); alert("系统再次崩溃，病毒继续下载中");
+  alert("病毒下载中"); 
+  alert("病毒下载中"); 
+  alert("病毒下载中");
+  alert("病毒下载中");
+  alert("病毒下载中");
+  alert("病毒下载中");
+  alert("病毒下载中"); 
+  alert("好吧，别打算重启，不玩了"); alert("我太善良，只弄了这一点窗口");alert("感谢我吧！");
+ alert("今天天气不错");
+ alert("嘿嘿");
+ 
+ alert("别想出去了"); 
+alert("           哈哈哈哈哈哈");
+alert("              点吧");
+alert("               哈哈，别郁闷了");
+alert("                  zZZ...");
+alert("                     我睡了~");
+alert("            你继续看吧");
+alert("你可以出去了");
+</script>
+
+
+	
+
+	 
+	 
+	  <script type="text/javascript">
+    var firework = function(){
+    this.size = 40;
+    this.speed = 0.1;
+    this.rise();
+    }
+    firework.prototype = {
+    color:function(){
+    var c = ['0','3','6','9','c','f'];
+    var t = [c[Math.floor(Math.random()*100)%6],'0','f'];
+    t.sort(function(){return Math.random()>0.5?-1:1;});
+    return '#'+t.join('');
+    },
+    aheight:function(){
+    var h = document.documentElement.clientHeight;
+    return Math.abs(Math.floor(Math.random()*h-200))+201;
+    },
+    firecracker:function(){
+    var b = document.createElement('div');
+    var w = document.body.clientWidth;
+    b.style.color = this.color();
+    b.style.position = 'absolute';
+    b.style.bottom = 0;
+    b.style.left = Math.floor(Math.random()*w)+1+'px';
+    document.body.appendChild(b);
+    return b;
+    },
+    rise:function(){
+    var o = this.firecracker();
+    var n = this.aheight();
+    var speed = this.speed;
+    var e = this.expl;
+    var s = this.size;
+    var k = n;
+    var m = function(){
+    o.style.bottom = parseFloat(o.style.bottom)+k*speed+'px';
+    k-=k*speed;
+    if(k<2){
+    clearInterval(clear);
+    e(o,n,s,speed);
+    }
+    }
+    o.innerHTML = '*';
+    if(parseInt(o.style.bottom)<n){
+    var clear = setInterval(m,20);
+    }
+    },
+    expl:function(o,n,s,speed){
+    var R = n/3;
+    var Ri = n/6;
+    var r = 0;
+    var ri = 0;
+    for(var i=0;i<s;i++){
+    var span = document.createElement('span');
+    var p = document.createElement('p');
+    span.style.position = 'absolute';
+    span.style.left = 0;
+    span.style.top = 0;
+    span.innerHTML = '*';
+    p.style.position = 'absolute';
+    p.style.left = 0;
+    p.style.top = 0;
+    p.innerHTML = '+';
+    o.appendChild(span);
+    o.appendChild(p);
+    }
+    function spr(){
+    r += R*speed;
+    ri+= Ri*speed/2;
+    sp = o.getElementsByTagName('span');
+    p = o.getElementsByTagName('p');
+    for(var i=0; i<sp.length;i++){
+    sp[i].style.left=r*Math.cos(360/s*i)+'px';
+    sp[i].style.top=r*Math.sin(360/s*i)+'px';
+    p[i].style.left=ri*Math.cos(360/s*i)+'px';
+    p[i].style.top=ri*Math.sin(360/s*i)+'px';
+    }
+    R-=R*speed;
+    if(R<2){
+    clearInterval(clearI);
+    o.parentNode.removeChild(o);
+    }
+    }
+    var clearI = setInterval(spr,20);
+    }
+    }
+    window.onload = function(){
+    function happyNewYear(){
+    new firework();
+    }
+    setInterval(happyNewYear,400);
+    }
+    </script>
+    
+  	 </body>
+ </html>
