--- a/test.html
+++ b/test.html
@@ -167,8 +167,7 @@ oEvent.preventDefault ? oEvent.preventDefault() : oEvent.returnValue = false
 });
 </script>
 <div id="tips"><a id="manual" href="javascript:;">手动燃放</a><a id="auto" href="javascript:;">自动燃放</a><a id="stop" href="javascript:;">停止燃放</a></div>
-<div id="zx">礼花燃放说明书:<br/>1"本烟花节能环保"无危害"燃放无风险。<br/>2"点击自动燃放可以解放双手(安卓设备如果使用360浏览器"自动燃放对渲染器性能要求较低"爆炸比较流畅"但没有其他浏览器壮观。)可以尽情欣赏烟花。<br/>3"点击手动燃放"你点哪儿"烟花就这哪儿爆炸"爆炸颗粒多"比较壮观"有趣"但对浏览器及渲染器性能是一种考验。<br/>4"点击停止燃放可以停止发射烟花。<br/>5"部分浏览器及设备不支持或运行本页较卡。<br/>6"手机推荐使用UC浏览器"因其渲染效果好"爆炸效果比较华丽"壮观！但对设备的性能要求将会更高！性能不加的机子暂时不使用uc浏览器"转而使用360浏览器(因其类似ie浏览器"且本人在代码中加入在用户使用Ie浏览器时自动较低爆炸效果"所以比较流畅"但不华丽)！<br/>7"电脑用户请不要使用IE浏览器浏览！
-</div></div><br/><br/><br/><br/><br/>            ↝↝↝↝↝↝↝↝↝↝↝↝↝↝↝<br/>                                   ↟WAP-掌上娱乐社区"节日礼花"！↡<br/>                                   ↜↜↜↜↜↜↜↜↜↜↜↜↜↜↜
-
-
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=2&id=1330023212&auto=1&height=32"></iframe> </body></html>
+<div id="zx">礼花燃放说明书:<br/>1"本烟花节能环保"无危害"燃放无风险。<br/>2"点击自动燃放可以解放双手(安卓设备如果使用360浏览器"自动燃放对渲染器性能要求较低"爆炸比较流畅"但没有其他浏览器壮观。)可以尽情欣赏烟花。<br/>3"点击手动燃放"你点哪儿"烟花就这哪儿爆炸"爆炸颗粒多"比较壮观"有趣"但对浏览器及渲染器性能是一种考验。<br/>4"点击停止燃放可以停止发射烟花。<br/>5"部分浏览器及设备不支持或运行本页较卡。<br/>
+</div></div><br/>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=2&id=1330023212&auto=1&height=32"></iframe> 
+</body></html>
