--- a/test.html
+++ b/test.html
@@ -1,173 +1,44 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
-<title>节日礼花</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0">
-<meta name="format-detection" content="telephone=no">
+<!DOCTYPE html><html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta http-equiv="Cache-Control" content="no-cache"/>
 </head>
-<body>
-<style type="text/css">
-#tips{text-align:center;border:2px solid #484848;border-width:0 0 2px;}
-#tips a{font:arial;color:#FFF;background:#F06;display:inline-block;margin:10px 5px 0;padding:0 15px;border-radius:15px;}
-#tips a.active{background:#FE0000;}
-#zx{border:2px solid purple;}
-</style>
+<body><iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=2&id=1330023212&auto=1&height=32"></iframe>
 <script type="text/javascript">
-var fgm = {
-on: function(element, type, handler) {
-return element.addEventListener ? element.addEventListener(type, handler, false) : element.attachEvent("on" + type, handler)
-},
-un: function(element, type, handler) {
-return element.removeEventListener ? element.removeEventListener(type, handler, false) : element.detachEvent("on" + type, handler)
-},
-bind: function(object, handler) {
-return function() {
-return handler.apply(object, arguments)
-}
-},
-randomRange: function(lower, upper) {
-return Math.floor(Math.random() * (upper - lower + 1) + lower)
-},
-getRanColor: function() {
-var str = this.randomRange(0, 0xFFFFFF).toString(16);
-while(str.length < 6) str = "0" + str;
-return "#" + str
-}
-};
-//初始化对象
-function FireWorks() {
-this.type = 0;
-this.timer = null;
-this.fnManual = fgm.bind(this, this.manual)
-}
-FireWorks.prototype = {
-initialize: function() {
-clearTimeout(this.timer);
-fgm.un(document, "click", this.fnManual);
-switch(this.type) {
-case 1:
-fgm.on(document, "click", this.fnManual);
-break;
-case 2:
-this.auto();
-break;
-};
-},
-manual: function(event) {
-event = event || window.event;
-this.__create__({
-x: event.clientX,
-y: event.clientY
-});
-},
-auto: function ()
+var jj=parseInt(prompt("输入你的鸡鸡长度厘米"));
+if(jj<=0)
 {
-var that = this;
-that.timer = setTimeout(function() {
-that.__create__({
-x: fgm.randomRange(50, document.documentElement.clientWidth - 50),
-y: fgm.randomRange(50, document.documentElement.clientHeight - 150)
-})
-that.auto();
-}, fgm.randomRange(900, 1100))
-},
-__create__: function (param)
+   alert("你是个太监吗？");
+}
+else if((jj>=1&&jj<=8))
 {
-var that = this;
-var oEntity = null;
-var oChip = null;
-var aChip = [];
-var timer = null;
-var oFrag = document.createDocumentFragment();
-oEntity = document.createElement("div");
-with(oEntity.style) {
-position = "absolute";
-top = document.documentElement.clientHeight + "px";
-left = param.x + "px";
-width = "4px";
-height = "30px";
-borderRadius = "4px";
-background = fgm.getRanColor();
-};
-document.body.appendChild(oEntity);
-oEntity.timer = setInterval(function() {
-oEntity.style.top = oEntity.offsetTop - 20 + "px";
-if(oEntity.offsetTop <= param.y) {
-clearInterval(oEntity.timer);
-document.body.removeChild(oEntity);
-(function() {
-//在50-100之间随机生成碎片
-//由于IE浏览器处理效率低, 随机范围缩小至20-30
-//自动放烟花时, 随机范围缩小至20-30
-var len = (/msie/i.test(navigator.userAgent) || that.type == 2) ? fgm.randomRange(20, 30) : fgm.randomRange(50, 100)
-for (i = 0; i < len; i++) {
-oChip = document.createElement("div");
-with(oChip.style) {
-position = "absolute";
-top = param.y + "px";
-left = param.x + "px";
-width = "4px";
-height = "4px";
-overflow = "hidden";
-borderRadius = "4px";
-background = fgm.getRanColor();
-};
-oChip.speedX = fgm.randomRange(-20, 20);
-oChip.speedY = fgm.randomRange(-20, 20);
-oFrag.appendChild(oChip);
-aChip[i] = oChip
-};
-document.body.appendChild(oFrag);
-timer = setInterval(function() {
-for(i = 0; i < aChip.length; i++) {
-var obj = aChip[i];
-with(obj.style) {
-top = obj.offsetTop + obj.speedY + "px";
-left = obj.offsetLeft + obj.speedX + "px";
-};
-obj.speedY++;
-(obj.offsetTop < 0 || obj.offsetLeft < 0 || obj.offsetTop > document.documentElement.clientHeight || obj.offsetLeft > document.documentElement.clientWidth) && (document.body.removeChild(obj), aChip.splice(i, 1))
-};
-!aChip[0] && clearInterval(timer);
-}, 30)
-})()
+  alert("鸡鸡太小，赶快戒撸");
 }
-}, 30)
+else if((jj>=9&&jj<=14))
+{
+   alert("鸡鸡一般，多锻炼身体吧");
 }
-};
-fgm.on(window, "load", function() {
-var oTips = document.getElementById("tips");
-var aBtn = oTips.getElementsByTagName("a");
-var oFireWorks = new FireWorks();
-fgm.on(oTips, "click", function(event) {
-var oEvent = event || window.event;
-var oTarget = oEvent.target || oEvent.srcElement;
-var i = 0;
-if(oTarget.tagName.toUpperCase() == "A") {
-for(i = 0; i < aBtn.length; i++) aBtn[i].className = "";
-switch(oTarget.id) {
-case "manual":
-oFireWorks.type = 1;
-break;
-case "auto":
-oFireWorks.type = 2;
-break;
-case "stop":
-oFireWorks.type = 0;
-break;
+else if((jj>=15&&jj<=20))
+{
+   alert("正常尺寸，可以搞定你的女人");
 }
-oFireWorks.initialize();
-oTarget.className = "active";
-oEvent.stopPropagation ? oEvent.stopPropagation() : oEvent.cancelBubble = true
+else if((jj>=21&&jj<=25))
+{
+   alert("鸡鸡虽屌，也不要贪逼哦");
 }
-});
-});
-fgm.on(document, "contextmenu", function(event) {
-var oEvent = event || window.event;
-oEvent.preventDefault ? oEvent.preventDefault() : oEvent.returnValue = false
-});
+else if((jj>=26&&jj<=30))
+{
+    alert("这么大，你是头野驴吗");
+}
+else if(jj>30)
+{
+   alert("禽兽啊，求你快离开地球吧");
+}
+else
+{
+   alert("输入错误，这是鸡鸡的长度吗");
+}
+document.write("仅供娱乐学习，无任何科学依据");
 </script>
-<div id="tips"><a id="manual" href="javascript:;">手动燃放</a><a id="auto" href="javascript:;">自动燃放</a><a id="stop" href="javascript:;">停止燃放</a></div>
-<div id="zx">礼花燃放说明书:<br/>1"本烟花节能环保"无危害"燃放无风险。<br/>2"点击自动燃放可以解放双手(安卓设备如果使用360浏览器"自动燃放对渲染器性能要求较低"爆炸比较流畅"但没有其他浏览器壮观。)可以尽情欣赏烟花。<br/>3"点击手动燃放"你点哪儿"烟花就这哪儿爆炸"爆炸颗粒多"比较壮观"有趣"但对浏览器及渲染器性能是一种考验。<br/>4"点击停止燃放可以停止发射烟花。<br/>5"部分浏览器及设备不支持或运行本页较卡。<br/>
-</div></div><br/>
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=0 height=0 src="//music.163.com/outchain/player?type=2&id=1330023212&auto=1&height=32"></iframe> 
-</body></html>
+</body>
+</html>
