--- a/text/demo.html
+++ b/text/demo.html
@@ -27,7 +27,7 @@
 					</ul>
 				</div>
 				<video width="100%" height="100%" id="playVideo">
-					<source src="C:\Users\TIME\Desktop\github  代码\web-1.0\text\images\智能工具防丢助手讲解视频 （更新二） .mp4" type="video/mp4"></source>
+					<source src="web-1.0\text\images\智能工具防丢助手讲解视频 （更新二） .mp4" type="video/mp4"></source>
 					当前浏览器不支持 video直接播放，点击这里下载视频： <a href="/">下载视频</a>
 				</video>
 				<div class="playTip glyphicon glyphicon-play"></div>
