--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="list">
 					<ul>
 						<li class="cls">
-							<p class="date">2018年8月14</p>
+							<p class="date">2018年8月14日</p>
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
