--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>日期(19980228)1998年02月28号， 今天写了两遍文章想了一下还是写到时间轴上，毕竟是时间轴，就是专门记录事情的，哈哈，建站这么久了，我才想起本站居然连关于本站都没有，所以写了一个关于本站，还有一个就是赞助本站，赞助也是一份心意而已，感兴趣的可以进去看看哟，关于本站具体也没怎么介绍，因为我也不知道怎么介绍，所以写了一些人生哲理希望有用，哈哈。</p>
+								<p>日期(19980228)1998年02月28号，今天，带着一个X-Y的岩聪宝宝破蛋跑到这个神奇的世界哇哇大哭。。。哈哈！！！</p>
 							</div>
 						</li>
 						<li class="cls">
@@ -38,7 +38,7 @@
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>日期(20000529)2000年05月29号， 发现博客访问有点卡。所以今天做了彻底的优化，自己花了50快单独买了一年的mysql用来存放数据库，程序又单独放到另一个地方，还买了一个cdn隐藏了源ip，可以说我这次不仅仅是做了优化，更是做了网站安全上的措施。3组合了解下！现在的访问速度我是相当自信的，哈哈！！！</p>
+								<p>日期(20000529)2000年05月29号， </p>
 							</div>
 						</li>
 					</ul>
