--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 					<ul>
 						<li class="cls">
 							<p class="date">1998年02月28日</p>
-							<p class="intro">留言板</p>
+							<p class="intro">破蛋日</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>日期(19980228)1998年02月28号，今天，带着一个X-Y的岩聪宝宝破蛋跑到这个神奇的世界哇哇大哭。。。哈哈！！！</p>
+								<p>日期(19980228)1998年02月28号，带着一个X-Y的岩聪宝宝破蛋跑到这个神奇的世界哇哇大哭。。。哈哈！！！</p>
 							</div>
 						</li>
 						<li class="cls">
-							<p class="date">2000年5月29日</p>
-							<p class="intro">留言板</p>
+							<p class="date">2000年05月29日</p>
+							<p class="intro">破蛋日</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>日期(20000529)2000年05月29号， </p>
+								<p>日期(20000529)2000年05月29号，带着一个X-X的碧妍宝宝破蛋跑到这个神奇的世界哇哇大哭。。。哈哈！！！ </p>
 							</div>
 						</li>
 					</ul>
@@ -46,7 +46,7 @@
 			</div>
 			
             <div class="year">
-				<h2><a href="#">2019年<i></i></a></h2>
+				<h2><a href="#">2019& 猪猪<i></i></a></h2>
 				<div class="list">
 					<ul>
                     		<li class="cls">
@@ -54,7 +54,7 @@
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>日期(19980228)1998年02月28号，今天，带着一个X-Y的岩聪宝宝破蛋跑到这个神奇的世界哇哇大哭。。。哈哈！！！</p>
+								<p>今天是我们在地球上的第一次相遇</p>
 							</div>
 						   </li>
                     
