--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@ $(".main .year>h2>a").click(function(e){
 	$(this).parents(".year").toggleClass("close");
 });
 </script>
+
+
+<div class="aplayer-info"><div class="aplayer-music"><span class="aplayer-title">大克星</span><span class="aplayer-author"> - www.51bbw.cn</span></div><div class="aplayer-lrc"><div class="aplayer-lrc-contents" style="transform: translateY(0);"></div></div><div class="aplayer-controller"><div class="aplayer-bar-wrap"><div class="aplayer-bar"><div class="aplayer-loaded" style="width: 9.89%;"></div><div class="aplayer-played" style="width: 3.68%;"><span class="aplayer-thumb"></span></div></div></div><div class="aplayer-time"> - <span class="aplayer-ptime">00:08</span> / <span class="aplayer-dtime">04:01</span><div class="aplayer-volume-wrap"><i class="demo-icon am-icon-volume-down"></i><div class="aplayer-volume-bar-wrap"><div class="aplayer-volume-bar"><div class="aplayer-volume" style="height: 80%"></div></div></div></div></div></div></div>
+
+
+
+
 	<div style="background:#ccc;text-align:center"><a href="http://www.aidezy.com/">返回QQ1000首页</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">关于QQ1000</a>&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a></div>
 </body>
 </html>
