--- a/index.html
+++ b/index.html
@@ -81,7 +81,20 @@ $(".main .year>h2>a").click(function(e){
 });
 </script>
 
-<div class="aplayer am-text-middle" id="player1" style="width: 270px;border: solid 1px #E0E0E0;padding: 4px;border-radius: 4px;text-align: center;margin: 0 auto;"><div class="aplayer-pic"><img src="http://www.51bbw.cn/images/footdon.png"><div class="aplayer-button aplayer-pause"><i class="demo-icon am-icon-pause"></i></div><div class="aplayer-button aplayer-play aplayer-hide"><i class="demo-icon am-icon-play"></i></div></div><div class="aplayer-info"><div class="aplayer-music"><span class="aplayer-title">大克星</span><span class="aplayer-author"> - www.51bbw.cn</span></div><div class="aplayer-lrc"><div class="aplayer-lrc-contents" style="transform: translateY(0);"></div></div><div class="aplayer-controller"><div class="aplayer-bar-wrap"><div class="aplayer-bar"><div class="aplayer-loaded" style="width: 63.76%;"></div><div class="aplayer-played" style="width: 62.19%;"><span class="aplayer-thumb"></span></div></div></div><div class="aplayer-time"> - <span class="aplayer-ptime">02:30</span> / <span class="aplayer-dtime">04:01</span><div class="aplayer-volume-wrap"><i class="demo-icon am-icon-volume-down"></i><div class="aplayer-volume-bar-wrap"><div class="aplayer-volume-bar"><div class="aplayer-volume" style="height: 80%"></div></div></div></div></div></div></div></div>
+
+
+
+<div style="text-align: center;">
+     <h2 class="am-scrollspy-init" style="margin-bottom:10px" data-am-scrollspy="{animation:'fade'}"><span class="zhuyezt">陪伴是最长情的告白</span></h2>
+     <div class="aplayer am-text-middle" id="player1" style="width: 270px;border: solid 1px #E0E0E0;padding: 4px;border-radius: 4px;text-align: center;margin: 0 auto;"><div class="aplayer-pic"><img src="http://www.51bbw.cn/images/footdon.png"><div class="aplayer-button aplayer-pause"><i class="demo-icon am-icon-pause"></i></div><div class="aplayer-button aplayer-play aplayer-hide"><i class="demo-icon am-icon-play"></i></div></div><div class="aplayer-info"><div class="aplayer-music"><span class="aplayer-title">大克星</span><span class="aplayer-author"> - www.51bbw.cn</span></div><div class="aplayer-lrc"><div class="aplayer-lrc-contents" style="transform: translateY(0);"></div></div><div class="aplayer-controller"><div class="aplayer-bar-wrap"><div class="aplayer-bar"><div class="aplayer-loaded" style="width: 100%;"></div><div class="aplayer-played" style="width: 76.36%;"><span class="aplayer-thumb"></span></div></div></div><div class="aplayer-time"> - <span class="aplayer-ptime">03:04</span> / <span class="aplayer-dtime">04:01</span><div class="aplayer-volume-wrap"><i class="demo-icon am-icon-volume-down"></i><div class="aplayer-volume-bar-wrap"><div class="aplayer-volume-bar"><div class="aplayer-volume" style="height: 80%"></div></div></div></div></div></div></div></div>
+     <script src="/staric/js/aplayer.min.js"></script>
+     <script>var ap1=new APlayer({element:document.getElementById("player1"),narrow:false,autoplay:true,showlrc:false,music:{title:"大克星",author:"www.51bbw.cn",url:"/mp3/bg.mp3",pic:"http://www.51bbw.cn/images/footdon.png"}});ap1.init();</script>
+     <h2 class="co" style="margin: 20px 0" data-scrollspy="{animation:'slide-bottom', delay: 500}">我要表白网-最浪漫的表白网页在线生成网站-为您传递浓浓的爱</h2>
+    </div>
+
+
+
+
 
 
 	<div style="background:#ccc;text-align:center"><a href="http://www.aidezy.com/">返回QQ1000首页</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">关于QQ1000</a>&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a></div>
