--- a/index.html
+++ b/index.html
@@ -83,15 +83,7 @@ $(".main .year>h2>a").click(function(e){
 
 
 
-
-<div style="text-align: center;">
-     <h2 class="am-scrollspy-init" style="margin-bottom:10px" data-am-scrollspy="{animation:'fade'}"><span class="zhuyezt">陪伴是最长情的告白</span></h2>
-     <div class="aplayer am-text-middle" id="player1" style="width: 270px;border: solid 1px #E0E0E0;padding: 4px;border-radius: 4px;text-align: center;margin: 0 auto;"><div class="aplayer-pic"><img src="http://www.51bbw.cn/images/footdon.png"><div class="aplayer-button aplayer-pause"><i class="demo-icon am-icon-pause"></i></div><div class="aplayer-button aplayer-play aplayer-hide"><i class="demo-icon am-icon-play"></i></div></div><div class="aplayer-info"><div class="aplayer-music"><span class="aplayer-title">大克星</span><span class="aplayer-author"> - www.51bbw.cn</span></div><div class="aplayer-lrc"><div class="aplayer-lrc-contents" style="transform: translateY(0);"></div></div><div class="aplayer-controller"><div class="aplayer-bar-wrap"><div class="aplayer-bar"><div class="aplayer-loaded" style="width: 100%;"></div><div class="aplayer-played" style="width: 76.36%;"><span class="aplayer-thumb"></span></div></div></div><div class="aplayer-time"> - <span class="aplayer-ptime">03:04</span> / <span class="aplayer-dtime">04:01</span><div class="aplayer-volume-wrap"><i class="demo-icon am-icon-volume-down"></i><div class="aplayer-volume-bar-wrap"><div class="aplayer-volume-bar"><div class="aplayer-volume" style="height: 80%"></div></div></div></div></div></div></div></div>
-     <script src="/staric/js/aplayer.min.js"></script>
-     <script>var ap1=new APlayer({element:document.getElementById("player1"),narrow:false,autoplay:true,showlrc:false,music:{title:"大克星",author:"www.51bbw.cn",url:"/mp3/bg.mp3",pic:"http://www.51bbw.cn/images/footdon.png"}});ap1.init();</script>
-     
-    </div>
-
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1357661533&auto=1&height=66"></iframe>
 
 
 
