--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@ $(".main .year>h2>a").click(function(e){
 </script>
 
 
+<div style="background:#ccc;text-align:center">
 
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=1357661533&auto=1&height=66"></iframe>
 
+</div>
 
 
 
-
-	<div style="background:#ccc;text-align:center"><a href="http://www.aidezy.com/">返回QQ1000首页</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">关于QQ1000</a>&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a></div>
+<div style="background:#ccc;text-align:center"><a href="http://www.aidezy.com/">返回QQ1000首页</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">关于QQ1000</a>&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a></div>
 </body>
 </html>
