--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
 		<hr class="line-left">
 		<hr class="line-right">
 		<div class="main">
-			<h1 class="title">岩聪宝宝 & 碧妍宝宝故事</h1>		
-	
-
-	
-			
-			<div class="year">
-				<h2><a href="#">1998 & 2000<i></i></a></h2>
+		<h1 class="title">岩聪宝宝 <img src="http://www.51bbw.cn/images/footdon.png" width="33" height="33" /> 碧妍宝宝故事</h1>
+		<div class="year">
+		  <h2><a href="#">1998 & 2000<i></i></a></h2>
 				<div class="list">
 					<ul>
 						<li class="cls">
