--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-
+<style type="text/css">
+body,td,th {
+	font-size: 12px;
+}
+</style>
 </head>
 <body>
 <div class="content">
@@ -16,7 +20,7 @@
 		<hr class="line-left">
 		<hr class="line-right">
 		<div class="main">
-		<h1 class="title">岩聪宝宝 <img src="http://www.51bbw.cn/images/footdon.png" width="33" height="33" /> 碧妍宝宝故事</h1>
+		<h1 class="title">岩聪宝宝 <img src="http://www.51bbw.cn/images/footdon.png" width="31" height="31" /> 碧妍宝宝 时光机</h1>
 		<div class="year">
 		  <h2><a href="#">1998 & 2000<i></i></a></h2>
 				<div class="list">
