--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>岩聪宝宝& 碧妍宝宝故事时间轴</title>
 <link href="style.css" rel="stylesheet" type="text/css" />
+<link href="http://www.51bbw.cn/images/favicon.ico" rel="icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <style type="text/css">
