--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body,td,th {
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>今天是我们在地球上的第一次相遇</p>
+								<p>我们在地球上的第一次相遇，所有故事从这里开始！</h1></p>
 							</div>
 						   </li>
                     
@@ -91,6 +91,6 @@ $(".main .year>h2>a").click(function(e){
 
 
 
-<div style="background:#ccc;text-align:center"><a href="http://www.aidezy.com/">返回QQ1000首页</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">关于QQ1000</a>&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a></div>
+<div style="background:#ccc;text-align:center"><a href="https://socooool.github.io/web-1.0/">返回QQ1000首页</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">关于QQ1000</a>&nbsp;&nbsp;<a href="http://aidezy.om/">网站定位</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">免责声明</a>&nbsp;&nbsp;<a href="http://www.aidezy.com/">广告联系</a></div>
 </body>
 </html>
