--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body,td,th {
 							<p class="intro">留言板</p>
 							<p class="version">&nbsp;</p>
 							<div class="more">
-								<p>我们在地球上的第一次相遇，所有故事从这里开始！</h1></p>
+								<p>我们的相遇是意外的，但这是一个美丽幸福的意外，让我遇到了这么好的你</h1></p>
 							</div>
 						   </li>
                     
