--- a/iloveyou.html
+++ b/iloveyou.html
@@ -44,21 +44,21 @@
             </div>
             <header class="header default">
                <div class=" left-part">
-                  <a class="logo scroll" href="http://love.zxgnz.com/html/20190804/15649054382211.html#hero">
+                  <a class="logo scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#hero">
                      <h2>LOVE</h2>
                   </a>
                </div>
                <div class="right-part">
                   <nav class="main-nav">
                      <div class="toggle-mobile-but">
-                        <a href="http://love.zxgnz.com/html/20190804/15649054382211.html#" class="mobile-but">
+                        <a href="https://socooool.github.io/web-1.0/iloveyou.html#" class="mobile-but">
                            <div class="lines"></div>
                         </a>
                      </div>
                      <ul style="">
-                        <li><a class="scroll" href="http://love.zxgnz.com/html/20190804/15649054382211.html#home">爱的首页</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#home">爱的首页</a></li>
                         <li><a class="scroll" href="https://socooool.github.io/web-1.0/">爱的故事</a></li>
-                        <li><a class="scroll" href="http://love.zxgnz.com/html/20190804/15649054382211.html#album">爱的相册</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#album">爱的相册</a></li>
                      </ul>
                   </nav>
                </div>
@@ -292,7 +292,7 @@
 
 <link rel="stylesheet" href="./iloveyou_files/cuplayer.css">
 				 <div style="position:absolute; top:50px; right:50px;">
-		<audio id="main_audio" autoplay="autoplay" preload="auto" loop="">
+		<audio id="main_audio" autoplay="autoplay" preload="auto" loop>
             <source src="http://www.zaiyiqiba.com/mp3/kgmp3.php?id=de7a6d73d7caa0e8962fd29f4e2162ef" type="audio/mpeg">
         </audio>
         <a class="c-white fs-12 icon-play rotate" id="btn-play" href="javascript:void(0);"></a>
@@ -338,7 +338,7 @@
     autoPlayAudio1(); // 推荐使用方法1
     </script>
 	<bgsound src="http://www.51bbw.cn/mp3/1youdiantian.mp3" loop="-1">
-<audio src="http://www.51bbw.cn/mp3/1youdiantian.mp3" controls="" autoplay="autoplay" loop="" id="bgmusic" style="display:none"></audio>
+<audio src="http://www.51bbw.cn/mp3/1youdiantian.mp3" controls autoplay="autoplay" loop id="bgmusic" style="display:none"></audio>
  <script>
     (function() {
         function log(info) {
