--- a/iloveyou.html
+++ b/iloveyou.html
@@ -57,7 +57,7 @@
                      </div>
                      <ul style="">
                         <li><a class="scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#home">爱的首页</a></li>
-                        <li><a class="scroll" href="https://socooool.github.io/web-1.0/">爱的故事</a></li>
+                        <li><a class="scroll" href="https://socooool.github.io/web-1.0/welove.html">爱的故事</a></li>
                         <li><a class="scroll" href="https://socooool.github.io/web-1.0/iloveyou.html#album">爱的相册</a></li>
                      </ul>
                   </nav>
