--- a/welove.html
+++ b/welove.html
@@ -89,13 +89,13 @@
             <ul class="nav navbar-nav">
               <!--------导航----------->
               <li id="menu-item-9" class="page-scroll">
-                <a title="Adam &amp; Eve" href="http://love.zxgnz.com/html/20190804/15649053622944.html#about">我们的爱情</a></li>
+                <a title="Adam &amp; Eve" href="https://socooool.github.io/web-1.0/welove.html#about">我们的爱情</a></li>
               <li id="menu-item-10" class="page-scroll">
-                <a title="Our Family" href="http://love.zxgnz.com/html/20190804/15649053622944.html#wmaq">我们的幸福时刻</a></li>
+                <a title="Our Family" href="https://socooool.github.io/web-1.0/welove.html#wmaq">我们的幸福时刻</a></li>
               <li id="menu-item-12" class="page-scroll">
-                <a title="Favorite List" href="http://love.zxgnz.com/html/20190804/15649053622944.html#xc">我们的幸福相册</a></li>
+                <a title="Favorite List" href="https://socooool.github.io/web-1.0/welove.html#xc">我们的幸福相册</a></li>
               <li id="menu-item-14" class="page-scroll">
-                <a title="Contact" href="http://love.zxgnz.com/html/20190804/15649053622944.html#contactus">祝福留言</a></li>
+                <a title="Contact" href="http://https://socooool.github.io/web-1.0/welove.html#contactus">祝福留言</a></li>
             </ul>
           </div>
         </div>
