--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body,td,th {
 		<hr class="line-left">
 		<hr class="line-right">
 		<div class="main">
-		<h1 class="title">岩聪宝宝 <img src="http://www.51bbw.cn/images/footdon.png" width="30" height="30" /> 碧妍宝宝时光机</h1>
+		<h1 class="title">岩聪宝宝 <img src="images\footdon.png" width="30" height="30" /> 碧妍宝宝时光机</h1>
 		<div class="year">
 		  <h2><a href="#">1998 & 2000<i></i></a></h2>
 				<div class="list">
